# AFM-analysis

./: .gitignore  DocsImage.py  README.md  afm_gold_nanoparticles.ipynb  main.py  pet.000  plan.md  preprocess_batch.py  preprocessing.ipynb  pyproject.toml  test.py  z_result.npy
data/: 5.011
notebooks/: afm_nanoparticles.ipynb
output/: afm_results_20260226_154831.csv
src/: __init__.py  afm_io.py  config.py  custom_afg_parser.py  detection.py  measure.py  preprocess.py  sam2_pipeline.py  visualization.py
tests/: test_io.py
