[project]
name = "afm-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.0,<3.0",
    "opencv-python>=4.10.0",
    "pandas>=2.2.0",
    "patched-yolo-infer>=1.3.10",
    "pyspm>=0.6.3",
    "requests>=2.32.5",
    "sam-2",
    "sam2>=1.1.0",
    "scikit-image>=0.24.0",
    "torch",
    "torchvision",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.41",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Что проверять
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins
    "C4",  # comprehensions
    "DTZ", # datetime
    "SIM", # simplify
    "PIE", # misc
    "T20", # print
    "RET", # return
    "RUF", # Ruff-specific
]

ignore = [
    "E501",   # line length (управляется formatter)
    "B008",   # функции в аргументах (норм для numpy/scipy)
]

fix = true
show-fixes = true

exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]
combine-as-imports = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "S101"]
